Closed Bug 1216179 Opened 9 years ago Closed 9 years ago

Fix fall-back HFP interface

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox44 fixed)

RESOLVED FIXED
FxOS-S10 (30Oct)
Tracking Status
firefox44 --- fixed

People

(Reporter: tzimmermann, Assigned: tzimmermann)

Details

Attachments

(1 file)

Bug 1207649 broke the HFP fall-back class.
Comment on attachment 8675740 [details] [diff] [review]
[01] Bug 1216179: Fix broken interface of fall-back Bluetooth HFP manager

Review of attachment 8675740 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM
Attachment #8675740 - Flags: review?(btian) → review+
https://hg.mozilla.org/mozilla-central/rev/98c32b89e38c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S10 (30Oct)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: