Bug 1216179: Fix broken interface of fall-back Bluetooth HFP manager, r=btian